test scan fini, debut de test scala avec locust

--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -7,7 +7,7 @@
 <body>
     <h2>Contrôle des tickets</h2>
 
-<input type="text" id="ticket_id" placeholder="Colle ou scanne le QR code">
+<input type="text" id="ticket_id" placeholder="Colle ou scanne le QR code" name="scan">
 <button onclick="simulateScan()">Vérifier</button>
 
 <div id="result"></div>
