--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,5 +14,7 @@
     {{ form.password() }}
 
     {{ form.submit }}
+
+    <a href="{{ url_for('main.register') }}">Se créer un compte</a>
 </form>
 {% endblock %}
