--- a/app/templates/profil.html
+++ b/app/templates/profil.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Mon espace{% endblock %}
+
+{% block header %}header{% endblock %}
 
 {% block content %}
+
+</div>
   <h1>Informations personnelles</h1>
     <table border="1" cellpadding="5" cellspacing="0">
   <tr>
