--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Modifier l'épreuve</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Modifier l'épreuve{% endblock %}
+
+{% block content %}
+
     <h1>Modifier l'épreuve</h1>
 
     <form method="post" enctype="multipart/form-data">
@@ -40,9 +39,9 @@
         {{ form.new_image() }}
 
         {{ form.new_submit() }}
-        {{ form.delete() }}
     </form>
 
     <a href="{{ url_for('main.all_epreuve') }}">Retour</a>
-</body>
-</html>
+
+
+{% endblock %}
