--- a/app/templates/all_epreuve.html
+++ b/app/templates/all_epreuve.html
@@ -1,9 +1,9 @@
-<!doctype html>
-<html lang="fr">
-<head>
-    <title>Liste des épreuves</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Dashboard Epreuves{% endblock %}
+
+{% block content %}
+
     <h1>Epreuves</h1>
     <a href="{{ url_for('main.add_epreuves') }}">Ajouter une épreuve</a>
     <ul>
@@ -22,5 +22,5 @@
         <a href="{{ url_for('main.epreuve_details', nom_epreuve=epreuve.nom_epreuve) }}">Plus de détails</a>
         {% endfor %}
     </ul>
-</body>
-</html>
+
+{% endblock %}
