--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="container my-4">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Jeux-Olympique</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.all_epreuve_front')}}">Epreuves</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.contact')}}">Contact</a>
+            </li>
+
+                {% if current_user.is_authenticated %}
+            <!-- Quand l'utilisateur est connecté -->
+              <li>
+                <a class="btn" href="{{ url_for('main.logout') }}">Déconnexion</a>
+              </li>
+        {% else %}
+            <!-- Quand il n'est pas connecté -->
+              <li>
+                  <a class="btn" href="{{ url_for('main.login') }}">Connexion</a>
+              </li>
+        {% endif %}
+
+
+              {% if current_user.role == 'admin' %}
+            <!-- Quand l'utilisateur est un admin -->
+              <li>
+                <a class="btn" href="{{ url_for('admin.admin_dashboard') }}">Mon espace</a>
+              </li>
+
+              {% elif current_user.role == 'employe' %}
+            <!-- Quand l'utilisateur est un employe-->
+              <li>
+                  <a class="btn" href="{{ url_for('employe.employe_dashboard') }}">Mon espace</a>
+              </li>
+
+              {% else %}
+            <!-- Quand l'utilisateur est un utilisateur-->
+              <li>
+                  <a class="btn" href="{{ url_for('utilisateur.utilisateur_dashboard') }}">Mon espace</a>
+              </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <div class="alert alert-success">
@@ -13,6 +66,12 @@
         </div>
       {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    {% block content %}{% endblock %}.
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
