--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Accueil{% endblock %}
+{% block title %}Contact{% endblock %}
 {% block content %}
 
 <h2>Contactez-nous</h2>
