--- a/app/templates/paiement_failure.html
+++ b/app/templates/paiement_failure.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Paiement refusé{% endblock %}
+
+{% block content %}
+
     <h2>Paiement refusé ❌</h2>
 <p>Raison : {{ error }}</p>
 <a href="{{url_for ('main.home')}}">Retour à l'accueil</a>
 
-</body>
-</html>
+{% endblock %}
