--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}Les Epreuves{% endblock %}</title>
+    {% block css %}{% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="container my-4">
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Jeux-Olympique</a>
@@ -59,6 +61,8 @@
         </div>
       </div>
     </nav>
+
+
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <div class="alert alert-success">
@@ -66,7 +70,16 @@
         </div>
       {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}.
+    {% block content %}{% endblock %}
+
+    <footer id="footer">
+    <div id="div-footer">
+        <a href="/"><img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Logo des jeux-olympiques" id="Logo-footer"></a>
+        <p id="attention">ATTENTION: Ceci n'est pas le site officiel, ce n'est qu'un projet d'étude.
+            Toute transaction ne sont que des simulations donc fausses,
+            pour votre sécurité évitez de mettre des vraies coordonnées bancaires. Merci pour votre compréhension </p>
+    </div>
+</footer>
 
 
 
