--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}Les Epreuves{% endblock %}</title>
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     {% block css %}{% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
+
 <body class="container my-4">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -58,6 +60,37 @@
               </li>
             {% endif %}
           </ul>
+
+                 <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          A LIRE AVANT DE VISITER LE SITE
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">A LIRE AVANT DE VISITER LE SITE</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p> ATTENTION: Ceci n'est pas le site officiel, ce n'est qu'un projet d'étude.
+                Toutes transactions ne sont que des simulations donc fausses, tout comme les billets/tickets avec les QR codes
+                pour votre sécurité évitez de mettre des vraies coordonnées bancaires. Merci pour votre compréhension</p>
+              </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                  <label class="form-check-label radio-disc" for="defaultCheck1">
+                    J'ai bien pris connaissance et j'accepte
+                  </label>
+                </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Compris</button>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </nav>
@@ -72,7 +105,7 @@
     {% endwith %}
     {% block content %}{% endblock %}
 
-    <footer id="footer">
+<footer id="footer">
     <div id="div-footer">
         <a href="/"><img src="{{ url_for('static', filename='images/logo.svg') }}" alt="Logo des jeux-olympiques" id="Logo-footer"></a>
         <p id="attention">ATTENTION: Ceci n'est pas le site officiel, ce n'est qu'un projet d'étude.
