page d'épreuve et epreuves détails

--- a/app/static/scss/index.scss
+++ b/app/static/scss/index.scss
@@ -9,13 +9,13 @@ $color-navbar: #0900E0;
 
 $carousel-img-width: 448px;
 $carousel-img-height: 275px;
-*/
+
 
 /*-----FONT------*/
 
 $font-text: 'Kameron';
 $font-size-title: 64px;
-$font-size-p: 24px;*/
+$font-size-p: 24px;
 
 
 @mixin title-style {
