--- a/app/templates/epreuve_front.html
+++ b/app/templates/epreuve_front.html
@@ -1,30 +1,60 @@
 {% extends "base.html" %}
 
+{% block css %}<link rel="stylesheet" href="{{ url_for('static', filename='css/epreuve_details.css') }}">{% endblock %}
+
+
 {% block title %}Epreuves - {{ epreuve.nom_epreuve }} {% endblock %}
 
 {% block content %}
-    <h1>{{ epreuve.nom_epreuve }}</h1>
 
-    <p>Date de l'épreuve : {{ epreuve.date_epreuve.strftime('%d/%m/%Y') }}</p>
+<section class="section-epreuves">
+ 
 
-    {% if epreuve.image_filename %}
-        <img src="{{ url_for('static', filename='uploads/image/' ~ epreuve.image_filename) }}" alt="Image de l'épreuve" style="max-width: 400px;">
-    {% else %}
-        <p>Aucune image disponible</p>
-    {% endif %}
+        
+            <div class="card card-epreuve" style="width: 60rem;">
 
-    <h2>Offres disponibles :</h2>
-    <ul>
-        {% for offre in epreuve.offres %}
-            <li>
-                {{ offre.type_offre }} : {{ offre.nombre_personne }} personne(s) - {{ offre.prix }} €
-            </li>
+                {% if epreuve.image_filename %}
+                    <img src="{{ url_for('static', filename='uploads/image/' ~ epreuve.image_filename) }}" alt="Image de l'épreuve">
+                {% else %}
+                    <p>Aucune image disponible</p>
+                {% endif %}
+                <div class="card-body">
+                    <h3 class="card-title">{{ epreuve.nom_epreuve }}</h3> 
+                    <p class="card-text">Date de l'épreuve : {{ epreuve.date_epreuve.strftime('%d/%m/%Y') }}</p>
+                </div>
+                                    <hr>
+                <div class="card-body jour-epreuve">
+                    <h6 class="card-title">Le jour de l'épreuve</h6>
+                    <p class="card-text">Veuillez vous munir de vos pieces d'identié ainsi que le QR code présent dans le ticket. 
+                    Notez que le QR code ne peut être scanner qu'une seule fois, donc les personnes qui ont un billet d'une offre duo ou family doivent entrer TOUS en même temps.</p>
+                </div>
+            </div>
+            
+    </section>
 
-        <a href="{{ url_for('paiement.paiement_epreuve', type_offre=offre.type_offre) }}">
-            Acheter
-        </a>
-        {% endfor %}
-    </ul>
 
+<hr>
+<br>
 
+    <h2 class="offre-title">Offres disponibles :</h2>
+
+    <section class="section-epreuves offres">
+            
+
+            {% for offre in epreuve.offres %}
+
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                                    <h5 class="card-title"> <strong>{{ offre.type_offre }} :</strong> </h5>
+                                    <p  class="card-text">Nombre de Personne(s) : {{ offre.nombre_personne }}</p>
+                                    <p  class="card-text">Prix : {{ offre.prix }} €</p>
+                                    <p  class="card-text">Nombres de place restante : {{offre.bi_restant}}</p>
+
+                            <a href="{{ url_for('paiement.paiement_epreuve', type_offre=offre.type_offre) }}" class="btn btn-outline-primary">
+                                Acheter </a>           
+                
+                    </div>
+                </div>
+            {% endfor %}
+    </section>
 {% endblock %}
