--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -90,7 +90,7 @@
               <div class="card-body jour-epreuve">
                   <h5 class="card-title">Le jour de l'épreuve</h5>
                     <hr>
-                  <p class="card-text">veuillez vous munir de vos pieces d'identié ainsi que le QR code présent dans le ticket. 
+                  <p class="card-text">Veuillez vous munir de vos pieces d'identié ainsi que le QR code présent dans le ticket. 
                     Notez que le QR code ne peut être scanner qu'une seule fois, donc les personnes qui ont un billet d'une offre duo ou family doivent entrer TOUS en même temps.</p>
                     <a href="{{ url_for('main.contact')}}" type="button" class="btn btn-outline-primary btn-card-contact">Voir Contact</a>
 
