--- a/app/static/css/epreuves.css
+++ b/app/static/css/epreuves.css
@@ -1,3 +1,13 @@
+h1 {
+
+    
+    
+    text-align: center;
+    font-family: 'Kameron', serif;
+    font-style: normal;
+
+}
+
 .section-epreuves{
     gap: 100px;
     display: flex;
@@ -5,6 +15,7 @@
     justify-content: center;
     margin-top: 50px;
     
+    padding: 40px;
 
     background-color: rgb(230, 230, 250);
 }
