--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block css %}<link rel="stylesheet" href="{{ url_for('static', filename='css/form.css') }}">{% endblock %}
+
 {% block title %}Mon espace: Administrateur{% endblock %}
 
 {% block content %}
@@ -16,10 +18,11 @@
     <h1>Dashboard Admin</h1>
 
 <br>
-    <h2>Informations personnelles</h2>
+
+  <h2>Informations personnelles</h2>
 <br>
 
-    <table border="1" cellpadding="5" cellspacing="0">
+    <table border="1" cellpadding="5" cellspacing="0" class="table">
       <tr><th>Nom</th><th>Prénom</th><th>Email</th></tr>
       <tr>
         <td>{{ user_info.nom }}</td>
@@ -27,31 +30,45 @@
         <td>{{ user_info.email }}</td>
       </tr>
     </table>
+
+
 <br>
 <hr>
-    <h2>Mettre à jour mon profil</h2>
+
+<section class="form-section admin-actions">
+
+  <h2>Mettre à jour mon profil</h2>
+
     <form method="POST" action="{{ url_for('admin.admin_dashboard') }}">
       {{ update_admin_form.hidden_tag() }}
       {{ update_admin_form.update_admin(value="update_admin") }}
       {{ update_admin_form.update_info_user_id(value=current_user.id) }}
-      {{ update_admin_form.new_nom.label }} {{ update_admin_form.new_nom() }}<br>
-      {{ update_admin_form.new_prenom.label }} {{ update_admin_form.new_prenom() }}<br>
-      {{ update_admin_form.new_email.label }} {{ update_admin_form.new_email() }}<br>
-      {{ update_admin_form.submit() }}
-    </form>
+      {{ update_admin_form.new_nom.label }} {{ update_admin_form.new_nom(class="form-control") }}<br>
+      {{ update_admin_form.new_prenom.label }} {{ update_admin_form.new_prenom(class="form-control") }}<br>
+      {{ update_admin_form.new_email.label }} {{ update_admin_form.new_email(class="form-control") }}<br>
+      {{ update_admin_form.submit(class="form-control btn btn-outline-info") }}
+    </form> 
+</section>
+
+
+    
 <br>
 <hr>
+<section class="form-section admin-actions">
+
     <h2>Créer un utilisateur</h2>
     <form method="POST">
       {{ create_user_form.hidden_tag() }}
       {{ create_user_form.create_user(value="create_user") }}
-      {{ create_user_form.nom.label }} {{ create_user_form.nom() }}<br>
-      {{ create_user_form.prenom.label }} {{ create_user_form.prenom() }}<br>
-      {{ create_user_form.email.label }} {{ create_user_form.email() }}<br>
-      {{ create_user_form.password.label }} {{ create_user_form.password() }}<br>
-      {{ create_user_form.role.label }} {{ create_user_form.role() }}<br>
-      {{ create_user_form.submit() }}
+      {{ create_user_form.nom.label }} {{ create_user_form.nom(class="form-control") }}<br>
+      {{ create_user_form.prenom.label }} {{ create_user_form.prenom(class="form-control") }}<br>
+      {{ create_user_form.email.label }} {{ create_user_form.email(class="form-control") }}<br>
+      {{ create_user_form.password.label }} {{ create_user_form.password(class="form-control") }}<br>
+      {{ create_user_form.role.label }} {{ create_user_form.role(class="form-control") }}<br>
+      {{ create_user_form.submit(class="form-control btn btn-outline-success") }}
     </form>
+</section>
+
 <br>
 <hr>
     <h2>Liste des utilisateurs</h2>
@@ -64,10 +81,15 @@
 </form>
 <br>
 
-    <table border="1" cellpadding="5" cellspacing="0">
+    <table border="1" cellpadding="5" cellspacing="0" class="table">
       <tr>
-        <th>ID</th><th>Nom</th><th>Prénom</th><th>Email</th>
-        <th>Rôle</th><th>Changer rôle</th><th>Supprimer</th>
+        <th>ID</th>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Email</th>
+        <th>Rôle</th>
+        <th>Changer rôle</th>
+        <th>Supprimer</th>
       </tr>
       {% for user in users %}
       <tr>
@@ -76,16 +98,15 @@
         <td>{{ user.prenom }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.role }}</td>
-        <td>
       <td>
           {% if user.id != current_user.id %}
 
       <form method="POST" action="{{ url_for('admin.admin_dashboard') }}" style="display:inline;">
           {{ update_role_forms[user.id].hidden_tag() }}
-          {{ update_role_forms[user.id].update_role() }}
+          {{ update_role_forms[user.id].update_role(class="form-control") }}
           {{ update_role_forms[user.id].update_role_user_id(value=user.id) }}
-          {{ update_role_forms[user.id].new_role() }}
-          {{ update_role_forms[user.id].submit() }}
+          {{ update_role_forms[user.id].new_role(class="form-control") }}
+          {{ update_role_forms[user.id].submit(class="form-control btn btn-outline-info") }}
       </form>
           {% endif %}
     </td>
@@ -93,8 +114,8 @@
       {% if user.id != current_user.id %}
       <form method="POST" action="{{ url_for('admin.admin_dashboard') }}" style="display:inline;" onsubmit="return confirm('Confirmer la suppression ?');">
           {{ delete_user_forms[user.id].hidden_tag() }}
-          {{ delete_user_forms[user.id].delete_user() }}
-          {{ delete_user_forms[user.id].delete_user_user_id() }}
+          {{ delete_user_forms[user.id].delete_user(class="form-control") }}
+          {{ delete_user_forms[user.id].delete_user_user_id(class="form-control") }}
           {{ delete_user_forms[user.id].delete(class="btn btn-danger") }}
       </form>
       {% endif %}
@@ -108,7 +129,10 @@
 <br>
 
 <h2>Epreuves</h2>
-<table border="1" cellpadding="5" cellspacing="0">
+
+<br>
+
+<table border="1" cellpadding="5" cellspacing="0" class="table">
   <tr>
     <th>ID</th>
     <th>Nom de l'offre (type_offre)</th>
