--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 
-<body class="container my-4">
+<body class="container my-4" style="    background-color: rgb(230, 230, 250);
+">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
